[package]
name = "backend-gm"
version = "0.1.0"
edition = "2021"
authors = ["GiacomoZheng <giacomo821@outlook.com>"]
# license = "MIT OR Apache-2.0"
description = "backend program for gm-lang"
readme = "README.md"
repository = "https://github.com/GiacomoZheng/backend-gm.git"
# keywords = ["cli", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
